reset rotation api
